syntax = "proto3";

package pallas.service.internal.conf;

import "google/protobuf/duration.proto";

option go_package = "pallas/service/internal/conf;conf";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Secret secret = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration read_timeout = 5;
    google.protobuf.Duration write_timeout = 6;
  }
  message Cache {
    bool lfu_enable = 1;
    int64 lfu_size = 2;
    google.protobuf.Duration ttl = 3;
    google.protobuf.Duration srp_ttl = 4;
  }
  Database database = 1;
  Redis redis = 2;
  Cache cache = 3;
}

message Secret {
  message Session {
    string session_key = 1;
  }
  message SRP {
    int32 srp_params = 1;
  }
  Session session = 1;
  SRP srp = 2;
}